image andtext changes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="THETHUNDERDOME." />
+    <meta
+      property="og:title"
+      content="TAKE ON THE COMPUTER OVERLORD INATRUETEST OF SKILL ."
+    />
+    <meta property="og:description" content=" CHOOSE WISLEY." />
+    <title>Thunderdome</title>
+    <link rel="icon" href="Images/wizard.ico" />
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/stylesheet.css" />
   </head>
   <body>
     <header>
-      <h1>THE THUNDER DOME</h1>
+      <h1>THE THUNDERDOME</h1>
     </header>
 
     <div class="score-board">
